minor alignment fixes

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
     height: 1rem;
     width: 1rem;
     margin-left: -.5rem;
-    margin-right: -.5rem;
+    margin-right: -.25rem;
     padding-left: 1.5rem;
     background-size: contain;
 }
@@ -326,7 +326,6 @@ body {
     opacity: 0;
     padding: 0;
     margin: 0;
-    /* margin-right: -.25rem; */
 }
 
 [data-hiding="true"] .revealer {
@@ -374,6 +373,10 @@ body {
 
 .language-list li {
     margin-bottom: var(--spacer2);
+}
+
+.language-list li:last-of-type {
+    margin-bottom: 0;
 }
 
 .language-list li:before {
